--- a/CSS/trabajo_parejas/index.html
+++ b/CSS/trabajo_parejas/index.html
@@ -74,7 +74,7 @@
                     <h2><img src="img/anne-s.png" class="icono2">Anne J</h2>
                     <h2><img src="img/alayne-s.png" class="icono2">Alayne T</h2>
                     <h2><img src="img/arry-s.png" class="icono2">Arry Y</h2>
-                    <a href="#"><class="marcador">View More</a>
+                    <a href="#"class="marcador">View More</a>
                 </div>
             </div>
         </div>
